--- a/seatingChart.html
+++ b/seatingChart.html
@@ -42,6 +42,7 @@ Steps:
 -Go to https://www.image-map.net/ and use the website to draw your new map hover coordinates
 -Copy these coordinates into the "Seating Map Hover Coordinates" section in the code below.
 -If you have new types of seats (ie: high top table for 5), make sure to add this to the "Seating Type Details" section below
+-Save and Commit your changes.
 -Test out your new map to ensure it works!
 
 ---------------------------------------------------------------------->
