Adding Demo Video

--- a/seatingChart.html
+++ b/seatingChart.html
@@ -38,8 +38,8 @@ get a description of what they are and how to update them.)
 
 How to update the seating map.
 Steps:
--Upload the new "Seating Map Image" you want to use to github.
--Go to https://www.image-map.net/ and use the website to draw your new map hover coordinates
+-Upload the new "Seating Map Image" file you want to use to github.
+-Go to https://www.image-map.net/ and use the website to draw your new map hover coordinates. (Demo: https://drive.google.com/file/d/1KSwEAUgu_lgyVmv0UTJ5C9rXU4OjUMcI/view?usp=sharing)
 -Copy these coordinates into the "Seating Map Hover Coordinates" section in the code below.
 -If you have new types of seats (ie: high top table for 5), make sure to add this to the "Seating Type Details" section below
 -Save and Commit your changes.
