--- a/seatingChart.html
+++ b/seatingChart.html
@@ -228,7 +228,7 @@ Steps:
         <h2>How to Enjoy the Circus</h2>
         <ul>
           <li><strong>Choose Date &amp; Time:</strong> Select the date and time that works best for you.</li>
-          <li><strong>Select Seating:</strong> <span class="important">Important:</span> Some options reserve an entire table rather than an individual seat. Read the seating details carefully to ensure you reserve the correct option.</li>
+          <li><strong>Select Seating:</strong> <span class="important">Important:</span> Some options reserve an <span class="important">entire table</span> rather than an individual seat. Read the seating details carefully to ensure you reserve the correct option.</li>
           <li><strong>Preorder Snacks:</strong> Order concessions in advance if desired.</li>
           <li><strong>Easy Check-In:</strong> When you arrive, simply tell us the name on your reservation—no physical ticket or QR code is required.</li>
           <li><strong>Enjoy the Show:</strong> Sit back and have fun!</li>
