--- a/seatingChart.html
+++ b/seatingChart.html
@@ -361,46 +361,46 @@ Steps:
 
       const seatTypeDetails = {
         "High Top For 2": {
-          image: "SeatingDefault.jpg",
-          cost: "$20"
+          image: "StageViewFromSeating.png",
+          cost: "$86 (+ $5 fee)"
         },
         "High Top Table For 4": {
-          image: "SeatingDefault.jpg",
-          cost: "$50"
+          image: "StageViewFromSeating.png",
+          cost: "$118 (+ $5 fee)"
         },
         "Canopy Table For 4": {
-          image: "SeatingDefault.jpg",
-          cost: "$55"
+          image: "StageViewFromSeating.png",
+          cost: "$145 (+ $5 fee)"
         },
         "VIP Table For 4": {
-          image: "SeatingDefault.jpg",
-          cost: "$75"
+          image: "StageViewFromSeating.png",
+          cost: "$185 (+ $5 fee)"
         },
         "VIP High Top For 2": {
-          image: "SeatingDefault.jpg",
-          cost: "$30"
+          image: "StageViewFromSeating.png",
+          cost: "$105 (+ $5 fee)"
         },
         "VIP Bench For 2": {
-          image: "SeatingDefault.jpg",
-          cost: "$25"
+          image: "StageViewFromSeating.png",
+          cost: "$98 (+ $5 fee)"
         },
         "Garden Bench For 2": {
-          image: "SeatingDefault.jpg",
-          cost: "$20"
+          image: "StageViewFromSeating.png",
+          cost: "$86 (+ $5 fee)"
         },
         "Single Stool": {
-          image: "SeatingDefault.jpg",
-          cost: "$15"
+          image: "StageViewFromSeating.png",
+          cost: "$18 (+ $5 fee)"
         },
         "Single Folding Chair": {
-          image: "SeatingDefault.jpg",
-          cost: "$10"
+          image: "StageViewFromSeating.png",
+          cost: "$26 (+ $5 fee)"
         }
       };
       
       // Default seat info details when no seat is hovered.
       const defaultDetails = {
-        image: "AerialTent.jpg",
+        image: "StageViewFromSeating.png",
         text: "Seating Overview",
         subtext: "(Hover Over Map for Details)"
       };
