--- a/seatingChart.html
+++ b/seatingChart.html
@@ -365,15 +365,15 @@ Steps:
           cost: "$86 (+ $5 fee)"
         },
         "High Top Table For 4": {
-          image: "StageViewFromSeating.png",
+          image: "fourTopTable.png",
           cost: "$118 (+ $5 fee)"
         },
         "Canopy Table For 4": {
-          image: "StageViewFromSeating.png",
+          image: "canopyTable.png",
           cost: "$145 (+ $5 fee)"
         },
         "VIP Table For 4": {
-          image: "StageViewFromSeating.png",
+          image: "canopyTable.png",
           cost: "$185 (+ $5 fee)"
         },
         "VIP High Top For 2": {
@@ -381,19 +381,19 @@ Steps:
           cost: "$105 (+ $5 fee)"
         },
         "VIP Bench For 2": {
-          image: "StageViewFromSeating.png",
+          image: "gardenBench.png",
           cost: "$98 (+ $5 fee)"
         },
         "Garden Bench For 2": {
-          image: "StageViewFromSeating.png",
+          image: "gardenBench.png",
           cost: "$86 (+ $5 fee)"
         },
         "Single Stool": {
-          image: "StageViewFromSeating.png",
+          image: "fourTopTable.png",
           cost: "$18 (+ $5 fee)"
         },
         "Single Folding Chair": {
-          image: "StageViewFromSeating.png",
+          image: "foldingChair.png",
           cost: "$26 (+ $5 fee)"
         }
       };
