--- a/seatingChart.html
+++ b/seatingChart.html
@@ -38,7 +38,8 @@ get a description of what they are and how to update them.)
 
 How to update the seating map.
 Steps:
--Upload the new "Seating Map Image" file you want to use to github.
+-Upload the new "Seating Map Image" file you want to use to the images folder in github.
+-Go to the Seating Map Image section in this file and change the picture name to the new image file you just uploaded (ie: images/newSeatingChartImage.png)
 -Go to https://www.image-map.net/ and use the website to draw your new map hover coordinates. (Demo: https://drive.google.com/file/d/1KSwEAUgu_lgyVmv0UTJ5C9rXU4OjUMcI/view?usp=sharing)
 -Copy these coordinates into the "Seating Map Hover Coordinates" section in the code below.
 -If you have new types of seats (ie: high top table for 5), make sure to add this to the "Seating Type Details" section below
@@ -157,9 +158,10 @@ Steps:
   Seating Map Image
   This is the image of the seating map shown on screen, just update the "src=..." on the next line
   with the seat map image you want. (Make sure the file type is correct, for instance .png vs .jpg vs .jpeg, etc)
+  -Also, make sure you uploaded the new image to the "images" foler and make sure the src below includes the right path (ie: images/newSeatingMap.png
 -------------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------------>
-      <img src="2025FCCSeatingMap.jpg" usemap="#image-map" id="seating-map" alt="Seating Map">
+      <img src="images/2025FCCSeatingMap.jpg" usemap="#image-map" id="seating-map" alt="Seating Map">
       <div id="highlight-container"></div>
     </div>
     <div class="right-column">
@@ -171,10 +173,10 @@ Steps:
 -------------------------------------------------------------------------------------------------------
   Default Seating type image
   This is the image of seats shown to the right of the seat map. If the mouse is not currently hovering
-  over any specific seat types, it uses the default image below specified by "src=..." Update as needed.
+  over any specific seat types, it uses the default image below specified by "src=images/..." Update as needed.
 -------------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------------>
-        <img src="AerialTent.jpg" alt="Default Seating">
+        <img src="images/AerialTent.jpg" alt="Default Seating">
 
 
 
@@ -311,7 +313,7 @@ Steps:
 //    Then you would need the below value to have the same title/name like:
 //
 //    "VIP Bench For 2": {
-//      image: "WhateverPictureYouWantToUse.jpg",
+//      image: "images/WhateverPictureYouWantToUse.jpg",
 //      cost: "$20"
 //     },
 //
@@ -323,46 +325,46 @@ Steps:
 
       const seatTypeDetails = {
         "High Top For 2": {
-          image: "StageViewFromSeating.png",
+          image: "images/StageViewFromSeating.png",
           cost: "$86 (+ $5 fee)"
         },
         "High Top Table For 4": {
-          image: "fourTopTable.png",
+          image: "images/fourTopTable.png",
           cost: "$118 (+ $5 fee)"
         },
         "Canopy Table For 4": {
-          image: "canopyTable.png",
+          image: "images/canopyTable.png",
           cost: "$145 (+ $5 fee)"
         },
         "VIP Table For 4": {
-          image: "canopyTable.png",
+          image: "images/canopyTable.png",
           cost: "$185 (+ $5 fee)"
         },
         "VIP High Top For 2": {
-          image: "StageViewFromSeating.png",
+          image: "images/StageViewFromSeating.png",
           cost: "$105 (+ $5 fee)"
         },
         "VIP Bench For 2": {
-          image: "gardenBench.png",
+          image: "images/gardenBench.png",
           cost: "$98 (+ $5 fee)"
         },
         "Garden Bench For 2": {
-          image: "gardenBench.png",
+          image: "images/gardenBench.png",
           cost: "$86 (+ $5 fee)"
         },
         "Single Stool": {
-          image: "fourTopTable.png",
+          image: "images/fourTopTable.png",
           cost: "$18 (+ $5 fee)"
         },
         "Single Folding Chair": {
-          image: "foldingChair.png",
+          image: "images/foldingChair.png",
           cost: "$26 (+ $5 fee)"
         }
       };
       
       // Default seat info details when no seat is hovered.
       const defaultDetails = {
-        image: "StageViewFromSeating.png",
+        image: "images/StageViewFromSeating.png",
         text: "Seating Overview",
         subtext: "(Hover Over Map for Details)"
       };
