--- a/seatingChart.html
+++ b/seatingChart.html
@@ -56,6 +56,13 @@ Steps:
   ---------------------------------------------------------------------->
   <title>Interactive Seating Map</title>
   <style>
+    html, body {
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
     body {
       font-family: Arial, sans-serif;
       margin: 0;
