Using new seating photos

--- a/seatingChart.html
+++ b/seatingChart.html
@@ -328,40 +328,40 @@ Steps:
 
       const seatTypeDetails = {
         "High Top For 2": {
-          image: "images/StageViewFromSeating.png",
-          cost: "$86 (+ $5 fee)"
+          image: "images/2025TwoTop.png",
+          cost: "$91 total"
         },
         "High Top Table For 4": {
-          image: "images/fourTopTable.png",
-          cost: "$118 (+ $5 fee)"
+          image: "images/2025FourTop.png",
+          cost: "$123 total"
         },
         "Canopy Table For 4": {
-          image: "images/canopyTable.png",
-          cost: "$145 (+ $5 fee)"
+          image: "images/2025CanopyTable.png",
+          cost: "$150 total"
         },
         "VIP Table For 4": {
-          image: "images/canopyTable.png",
-          cost: "$185 (+ $5 fee)"
+          image: "images/2025VipTable.png",
+          cost: "$190 total"
         },
         "VIP High Top For 2": {
-          image: "images/StageViewFromSeating.png",
-          cost: "$105 (+ $5 fee)"
+          image: "images/2025VipHighTop.png",
+          cost: "$110 Total"
         },
         "VIP Bench For 2": {
-          image: "images/gardenBench.png",
-          cost: "$98 (+ $5 fee)"
+          image: "images/2025Bench.png",
+          cost: "$103 total"
         },
         "Garden Bench For 2": {
-          image: "images/gardenBench.png",
-          cost: "$86 (+ $5 fee)"
+          image: "images/2025Bench.png",
+          cost: "$91 total"
         },
         "Single Stool": {
-          image: "images/fourTopTable.png",
-          cost: "$18 (+ $5 fee)"
+          image: "images/2025FourTop.png",
+          cost: "$23 per stool"
         },
         "Single Folding Chair": {
-          image: "images/foldingChair.png",
-          cost: "$26 (+ $5 fee)"
+          image: "images/2025FoldingChair.png",
+          cost: "$31 per seat"
         }
       };
       
